Training docs/Assignment8/Trial/src/objects/Lead.object
<CustomObject>
	<businessProcesses>
		<fullName>Lead</fullName>
		<description>This Displays the lead process.</description>
		<isActive>true</isActive>
		<values>
			<fullName>Closed - Converted</fullName>
		</values>
		<values>
			<fullName>Closed - Not Converted</fullName>
		</values>
		<values>
			<fullName>Open - Not Contacted</fullName>
			<default>true</default>
		</values>
		<values>
			<fullName>Working - Contacted</fullName>
		</values>
	</businessProcesses>
	<fields>
		<fullName>CurrentGenerators__c</fullName>
		<label>Current Generator(s)</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Follow_up__c</fullName>
		<description>Displays the Follow up Date.</description>
		<inlineHelpText>Please Enter the Follow up date.</inlineHelpText>
		<label>Follow up</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>NumberofLocations__c</fullName>
		<label>Number of Locations</label>
		<precision>3</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Primary__c</fullName>
		<label>Primary</label>
		<picklist>
			<picklistValues>
				<fullName>No</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yes</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>ProductInterest__c</fullName>
		<label>Product Interest</label>
		<picklist>
			<picklistValues>
				<fullName>GC1000 series</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>GC5000 series</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>GC3000 series</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>SICCode__c</fullName>
		<label>SIC Code</label>
		<length>15</length>
		<type>Text</type>
	</fields>
	<listViews>
		<fullName>AllOpenLeads</fullName>
		<filterScope>Everything</filterScope>
		<filters>
			<field>LEAD.STATUS</field>
			<operation>notContain</operation>
			<value>closed</value>
		</filters>
		<label>All Open Leads</label>
	</listViews>
	<listViews>
		<fullName>MyUnreadLeads</fullName>
		<filterScope>Mine</filterScope>
		<filters>
			<field>LEAD.UNREAD</field>
			<operation>equals</operation>
			<value>1</value>
		</filters>
		<label>My Unread Leads</label>
	</listViews>
	<listViews>
		<fullName>TodaysLeads</fullName>
		<filterScope>Everything</filterScope>
		<filters>
			<field>LEAD.CREATED_DATE</field>
			<operation>equals</operation>
			<value>TODAY</value>
		</filters>
		<label>Today&apos;s Leads</label>
	</listViews>
	<listViews>
		<fullName>Trial_queue_Lead</fullName>
		<filterScope>Queue</filterScope>
		<label>Trial queue</label>
		<queue>Trial_queue</queue>
		<sharedTo>
			<allInternalUsers></allInternalUsers>
		</sharedTo>
	</listViews>
	<listViews>
		<fullName>ViewCustom1</fullName>
		<columns>FULL_NAME</columns>
		<columns>LEAD.COMPANY</columns>
		<columns>LEAD.STATE</columns>
		<columns>LEAD.EMAIL</columns>
		<columns>LEAD.STATUS</columns>
		<columns>LEAD.CREATED_DATE</columns>
		<columns>CORE.USERS.ALIAS</columns>
		<columns>LEAD.UNREAD</columns>
		<filterScope>Everything</filterScope>
		<label>View - Custom 1</label>
	</listViews>
	<listViews>
		<fullName>ViewCustom2</fullName>
		<columns>FULL_NAME</columns>
		<columns>LEAD.COMPANY</columns>
		<columns>LEAD.STATE</columns>
		<columns>LEAD.EMAIL</columns>
		<columns>LEAD.STATUS</columns>
		<columns>LEAD.CREATED_DATE</columns>
		<columns>CORE.USERS.ALIAS</columns>
		<columns>LEAD.UNREAD</columns>
		<columns>LEAD.LEAD_SOURCE</columns>
		<filterScope>Everything</filterScope>
		<label>View - Custom 2</label>
	</listViews>
	<recordTypes>
		<fullName>DNC</fullName>
		<active>true</active>
		<businessProcess>Lead</businessProcess>
		<description>This is a Record Type For the Lead with DNC.</description>
		<label>DNC</label>
	</recordTypes>
	<recordTypes>
		<fullName>LANDLINE</fullName>
		<active>true</active>
		<businessProcess>Lead</businessProcess>
		<description>This is a Record Type For the having Lead with LANDLINE
			No.</description>
		<label>LANDLINE</label>
	</recordTypes>
	<recordTypes>
		<fullName>Mobile</fullName>
		<active>true</active>
		<businessProcess>Lead</businessProcess>
		<description>This is a Record Type For the having Lead with Mobile No.</description>
		<label>Mobile</label>
	</recordTypes>
	<recordTypes>
		<fullName>No_Number</fullName>
		<active>true</active>
		<businessProcess>Lead</businessProcess>
		<description>This is a Record Type For the Lead with No Number.</description>
		<label>No Number</label>
	</recordTypes>
	<sharingModel>Private</sharingModel>
</CustomObject>